@@ -74,7 +74,7 @@
     <ul class="list-unstyled">
       <li>
         <p><strong>Johannes Ranke</strong>. Author, maintainer, copyright&nbsp;holder.
-        </p>
+        <br /><small>0000-0003-4371-6538</small></p>
       </li>
     </ul>
 
