@@ -85,7 +85,8 @@ this program. If not, see &lt;http:<span class="er">//</span>www.gnu.org/license
 <p>GPL</p>
 <h2>Developers</h2>
 <ul class="list-unstyled">
-<li>Johannes Ranke <br><small class="roles"> Author, maintainer, copyright holder </small> </li>
+<li>Johannes Ranke <br><small class="roles"> Author, maintainer, copyright holder </small> <br><small>(0000-0003-4371-6538)</small>
+</li>
 </ul>
 </div>
 </div>
