@@ -72,7 +72,7 @@
     </div>
 
     
-    <p>This is reimplementation of the FOCUS Step 1 and 2 calculator version 3.2,
+    <p>This is a reimplementation of the FOCUS Step 1 and 2 calculator version 3.2,
 authored by Michael Klein, in R. Note that results for multiple
 applications should be compared to the corresponding results for a
 single application. At current, this is not done automatically in
@@ -167,7 +167,7 @@ should be written</p></td>
     <tr>
       <th>overwrite</th>
       <td><p>Should an existing file a the location specified in
-<code>txt_file</code> be overwritten?</p></td>
+<code>txt_file</code> be overwritten? Only takes effect if append is FALSE.</p></td>
     </tr>
     <tr>
       <th>append</th>
