@@ -70,7 +70,7 @@
     <div class="page-header">
       <h1>
         Reference
-        <small>version&nbsp;0.4-3</small>
+        <small>version&nbsp;0.4-5</small>
       </h1>
     </div>
 
